@@ -1,8 +1,9 @@
 #! /bin/sh
 # $Id: ip6tables_display.sh,v 1.1 2012/04/24 22:13:41 nanard Exp $
-IPTABLES=/sbin/ip6tables
+
+IPV6=1
+. $(dirname "$0")/miniupnpd_functions.sh
 
 #display all chains relative to miniupnpd
 $IPTABLES -v -n -t filter -L FORWARD
-$IPTABLES -v -n -t filter -L MINIUPNPD
-
+$IPTABLES -v -n -t filter -L $CHAIN
